
2009-01-28
Create Solution
Element with tests
Element Equals and Hash
Element Multiply

2009-01-30
IGroup
BaseGroup with equality
GeneratedGroup
SymmetricGroup
CompleteGroup
Multiply of Groups
Elements closure
Groups closure
Subgroups of a Group

2009-01-31
Cyclic groups of a Group
Normal subgroups of a Group (WIP)
Two groups are isomorphic? (WIP)