@@ -20,3 +20,7 @@ Subgroups of a Group
 Cyclic groups of a Group
 Normal subgroups of a Group (WIP)
 Two groups are isomorphic? (WIP)
+
+2009-09-13
+IElement abstraction and refactoring
+OperationTable with Tests
